Website updates - adding Food Preview section

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -36,7 +36,7 @@
                         text-decoration: none;
                         margin-bottom: 1.4rem;
                         display: block;
-                        transition: color .3s ease-in-out;
+                        transition: color 0.3s ease-in-out;
                         &:hover {
                             color: red;
                         }
@@ -51,7 +51,7 @@
                 justify-content: center;
                 align-items: center;
                 background: #c2c8cc;
-                font-size: .9rem;
+                font-size: 0.9rem;
                 text-decoration: none;
                 color: white;
                 height: 30px;
@@ -67,6 +67,7 @@
             .address {
                 color: #7a8d99;
                 margin-bottom: 20px;
+                line-height: 1.7;
             }
             .phone-number {
                 a {
@@ -78,9 +79,164 @@
             }
         }
     }
-
     .welcome-jumbo {
-        background: red;
+        max-width: calc(100vw - 350px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background: #ed4852;
+        background: -moz-radial-gradient(
+            center, 
+            ellipse cover, 
+            #ed4852 0%, 
+            #9c1b24 100%
+        ); /* FF3.6-15 */
+        background: -webkit-radial-gradient(
+            center, 
+            ellipse cover, 
+            #ed4852 0%, 
+            #9c1b24 100%
+        ); /* Chrome10-25, Safari5.1-6 */
+        background: radial-gradient(
+            ellipse at center, 
+            #ed4852 0%, 
+            #9c1b24
+        ); /* W3C, IE10+, Chrome26+, Opera12+, Safari7+ */
+        overflow: hidden;
+        padding: 100px;
+        .status {
+            display: inline-block;
+            padding: 10px 15px;
+            font-size: 0.8rem;
+            font-weight: 700;
+            color: white;
+            background: black;
+            border-radius: 5px;
+            align-self: flex-start;
+            margin-bottom: 20px;
+        }
+        h1 {
+            font-size: 4rem;
+            font-weight: 900;
+            align-self: flex-start;
+            color: white;
+            margin-bottom: 100px;
+        }
+        .burger-fries {
+            width: 100%;
+            // max-width: 1000px;
+            // animation: moveUpandDown .5s linear infinite;
+            position: relative;
+        }
+        // @keyframes moveUpandDown {
+        //     0%, 100% {
+        //         bottom: 0;
+        //     }
+        //     50% {
+        //         bottom: 30px;
+        //     }
+        // }
     }
 }
 
+#information {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100vh;
+    .restaurant-image {
+        overflow: hidden;
+        height: 100%;
+        img {
+            width: 100%;
+            // height: 500px;
+            // object-fit: cover;
+            // object-position: 0 0;
+        }
+    }
+    .info {
+        padding: 100px 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h2 {
+            font-size: 3rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+        .paragraphs {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-gap: 20px;
+            line-height: 1.7;
+            color: #525e66;
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+        .about-link {
+            font-size: 1.8rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: black;
+            font-weight: 700;
+            span {
+                margin-right: 20px;
+            }
+            .circle-right {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 40px;
+                width: 40px;
+                border-radius: 50%;
+                background: #ed4852;
+                background: -moz-radial-gradient(
+                    center, 
+                    ellipse cover, 
+                    #ed4852 0%, 
+                    #9c1b24 100%
+                ); /* FF3.6-15 */
+                background: -webkit-radial-gradient(
+                    center, 
+                    ellipse cover, 
+                    #ed4852 0%, 
+                    #9c1b24 100%
+                ); /* Chrome10-25, Safari5.1-6 */
+                background: radial-gradient(
+                    ellipse at center, 
+                    #ed4852 0%, 
+                    #9c1b24
+                ); /* W3C, IE10+, Chrome26+, Opera12+, Safari7+ */
+                .fa-chevron-right {
+                    color: white;
+                    font-size: 1.3rem;
+                }
+            }
+        }
+    }
+}
+
+#food-preview {
+    background: #f4f8fb;
+    padding: 100px;
+    .button-rounded {
+        background: #ed4852;
+        color: white;
+        display: inline-block;
+        padding: 15px;
+        border-radius: 30px;
+    }
+    .food-slider {
+        .slide {
+            width: 20%
+        }
+    }
+}
+h2 {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
