--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -222,16 +222,83 @@
 #food-preview {
     background: #f4f8fb;
     padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h2 {
+        text-align: center;
+    }
     .button-rounded {
         background: #ed4852;
         color: white;
         display: inline-block;
         padding: 15px;
         border-radius: 30px;
+        margin-bottom: 200px;
+        //width: 100px;
     }
     .food-slider {
+        width: 100%;
+        max-width: 1400px;
+        display: flex;
         .slide {
-            width: 20%
+            width: 20%;
+            position: relative;
+            height: 500px;
+            cursor: pointer;
+            &:hover {
+                .background {
+                    background: rgb(245, 156, 46);
+                    transform: translate3d(0, -100px, 0);
+                }
+                .content {
+                    .food-title {
+                        color: white;
+                    }
+                    .food-description {
+                        color: white;
+                    }
+                }
+            }
+            .background {
+                background: white;
+                top: 0;
+                bottom: 0;
+                height: 100%;
+                width: 100%;
+                z-index: 1;
+                position: absolute;
+                transition: transform .3s ease-in-out;
+            }
+            .content {
+                position: absolute;
+                z-index: 2;
+                padding: 20px;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .food-title {
+                    color: #ed4852;
+                    font-size: 2rem;
+                    font-weight: 900;
+                    margin-bottom: 3rem;
+                    // transition: all .3s ease-in-out;
+                }
+                .food-description {
+                    font-size: .8rem;
+                    font-weight: 400;
+                    margin-bottom: 3rem;   
+                    line-height: 1.8;
+                    margin-bottom: 3rem;
+                    color: #7a8d99;                 
+                }
+            }
+            img {
+                width: 95%;
+                max-width: 250px;
+            }
         }
     }
 }
