--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -172,7 +172,7 @@
             line-height: 1.7;
             color: #525e66;
             font-size: 1.2rem;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
         }
         .about-link {
             font-size: 1.8rem;
@@ -228,6 +228,7 @@
     flex-direction: column;
     h2 {
         text-align: center;
+        margin-bottom: 3rem;
     }
     .button-rounded {
         background: #ed4852;
@@ -235,14 +236,54 @@
         display: inline-block;
         padding: 15px;
         border-radius: 30px;
-        margin-bottom: 200px;
+        margin-bottom: 130px;
         //width: 100px;
     }
+
+    .container {
+        width: 100%;
+        max-width: 1400px;
+        position: relative;
+
+        .left-btn, .right-btn {
+            background: red;
+            color: white;
+            height: 50px;
+            width: 50px;
+            position: absolute;
+            top: calc(50% - 25px);
+            display: inline-block;
+            z-index: 5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        .left-btn {
+            left: -35px;
+        }
+        .right-btn {
+            right: -35px;
+        }
+    }
+
     .food-slider {
         width: 100%;
         max-width: 1400px;
-        display: flex;
+        //display: flex;
+        //margin-bottom: 2rem;
+        overflow: hidden;
+        position: relative;
+        font-size: 0;
+
+        .sliding-system {
+            white-space:nowrap;
+            transform: translate3d(0%, 0, 0)
+        }
+
         .slide {
+            display: inline-block;
+            white-space: normal;
             width: 20%;
             position: relative;
             height: 500px;
@@ -250,7 +291,7 @@
             &:hover {
                 .background {
                     background: rgb(245, 156, 46);
-                    transform: translate3d(0, -100px, 0);
+                    transform: translate3d(0, -200px, 0);
                 }
                 .content {
                     .food-title {
@@ -305,5 +346,5 @@
 h2 {
     font-size: 3rem;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin-bottom: 3rem;
 }
